--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   touch-action: manipulation;
 }
 
-body {
+/* body {
   background-color: rgb(161, 100, 223);
   font-family: "Poppins", sans-serif;
   display: flex;
@@ -34,7 +34,7 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
-}
+} */
 
 /* Carte de l'app */
 .app {
