--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 /* Corps centré, fond stylé */
 body {
-  background: radial-gradient(circle at top, #e0c3fc, #8ec5fc);
+  background-color: radial-gradient(circle at top, #e0c3fc, #8ec5fc);
   font-family: "Poppins", sans-serif;
   display: flex;
   align-items: center;
@@ -24,13 +24,7 @@ body {
 }
 
 /* body {
-  background-color: rgb(161, 100, 223);
-  font-family: "Poppins", sans-serif;
-  display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
   height: 100vh;
   overflow: hidden;
   margin: 0;
