--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-  background-color: #a5cdf5;
+  background: #b5f5a5;
   font-family: "Poppins", sans-serif;
 
   display: flex;
