--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-  background: #a5adf5;
+  background: #e0c3fc;
   font-family: "Poppins", sans-serif;
 
   display: flex;
@@ -25,7 +25,7 @@ body {
 
 /* Carte */
 .app {
-  background: rgba(15, 23, 42, 0.78);
+  background: rgba(71, 83, 109, 0.719);
   border-radius: 24px;
   padding: 1.8rem 1.9rem;
   max-width: 480px;
@@ -67,7 +67,7 @@ audio {
 }
 
 .btn {
-  background-color: rebeccapurple;
+  background-color: #8ec5fc;
   border-radius: 999px;
   border: none;
   color: #fff;
@@ -89,8 +89,8 @@ audio {
 }
 
 .btn.playing {
-  background-color: #ffffff;
-  color: rebeccapurple;
+  background-color: #fff;
+  color: #8ec5fc;
   transform: scale(1.05);
   box-shadow: 0 8px 22px rgba(15, 23, 42, 0.5);
 }
